syntax = "proto3";

option java_multiple_files = true;

package com.github.jameshnsears.chance.data.domain.proto;

message SideProtocolBuffer {
  string uuid = 1;
  int32 number = 2;
  string numberColour = 3;
  string imageBase64 = 4;
  int32 imageDrawableId = 5;
  string description = 6;
  int32 descriptionStringsId = 7;
  string descriptionColour = 8;
}
